--- a/turbo.json
+++ b/turbo.json
@@ -13,15 +13,15 @@
       "outputs": [],
       "dependsOn": ["^build"]
     },
-    "analyze:types": {
+    "types": {
       "outputs": [],
       "dependsOn": ["^build"]
     },
-    "//#analyze": {
+    "//#check": {
       "dependsOn": [],
       "outputs": []
     },
-    "//#analyze:ci": {
+    "//#ci": {
       "dependsOn": [],
       "outputs": []
     },
