--- a/.github/workflows/ci-pr-format.yaml
+++ b/.github/workflows/ci-pr-format.yaml
@@ -13,6 +13,9 @@ jobs:
     runs-on: ubuntu-latest
     name: Formatting
     timeout-minutes: 5
+    permissions:
+      issues: write
+      pull-requests: write
     steps:
       - name: '🏷️ Validate Labels: Semver'
         uses: mheap/github-action-required-labels@v5
