🔥 hotfix: fix type analysis

--- a/packages/tempo/package.json
+++ b/packages/tempo/package.json
@@ -36,7 +36,7 @@
     "dev": "rslib build --watch",
     "build": "rslib build",
     "test": "vitest --coverage",
-    "analyze:types": "tsc --noEmit"
+    "types": "tsc --noEmit"
   },
   "devDependencies": {
     "@rslib/core": "^0.6.1",
